# pandas-python

./: .gitignore  Makefile  README.md  pyproject.toml
src/: categories_mandril.py  gastos_mandril.py  gastos_mandril_to_csv.py  helpers.py  main.py  products_mandril.py
src/notebooks/: compare-prices.ipynb  gastos_ventas_analysis.ipynb  pandas.ipynb
